# UntitledI18N

./: .gitignore  .gitmodules  CMakeLists.txt  Common.h  README.md  UI18N.cpp  UI18N.hpp  UntitledI18N.pc.in  ci.sh
.github/: auto-issue-template.md
.github/workflows/: CI.yaml  release.yaml  update.yml
C/: cui18n.cpp  cui18n.h
cmake/: FindYamlCpp.cmake
